--- a/horloge.html
+++ b/horloge.html
@@ -10,6 +10,8 @@ body {
 	text-align: center;
 }
 
+section { text-align: left }
+
 body > div { 
 	display: flex;
 	flex-wrap: wrap;
@@ -21,7 +23,13 @@ body > div > div { flex-grow: 1 }
 
 <h1>Horloge fractionnaire</h1>
 
-<p> Pourquoi 60 minutes dans une heure ?
+<section>
+<h2>Pourquoi 60 minutes dans une heure ?</h2>
+
+<p> Pourquoi donc une heure est-elle divisée en 60 minutes ? C'est une conséquence d'un choix fait par les Babyloniens, qui comptaient par paquets de 60 (en <q>base 60</q>) comme nous comptons par paquets de 10 et de 100. Ce nombre n'a pas été choisi au hasard, mais parce qu'il a un nombre particulièrement élevé de diviseurs.
+
+<p> Les savants babyloniens, versés en Astronomie, mesurant des angles, avaient trouvé plus pratique cette base qui permet de tomber sur des nombres entiers en divisant par 2, 3, 4, 5 et 6. Pourtant, dans le langage courant, on n'utilise que sur les 1/2 heure et les 1/4 d'heure, pas les 1/3, 1/5, 1/6, 1/10... Qui tombent pourtant également sur un nombre entier de minutes !
+</section>
 
 <div>
 	<div>	
